--- a/package.json
+++ b/package.json
@@ -47,10 +47,15 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "ease-component": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-form": "5.0.1",
+    "redux-thunk": "^2.1.0",
     "scroll": "^2.0.0",
     "scroll-doc": "^0.1.3"
   },
